fix: truncate long titles without spaces

--- a/packages/app/src/components/App.css
+++ b/packages/app/src/components/App.css
@@ -71,6 +71,10 @@ body {
 
 /* Main center */
 
+.main-center {
+    overflow: hidden;
+}
+
 .main-center-canvas {
     display: flex;
     justify-content: center;
